Fix problem with overflow at small screen sizes in about section

--- a/front-end/src/styles/about.css
+++ b/front-end/src/styles/about.css
@@ -27,15 +27,23 @@
   margin: 0 10% 25%;
 }
 
+@media screen and (max-width: 425px) {
+  #about .proficiencies {
+    text-align: center;
+    margin: 0 0 25%;
+  }
+}
+
 #about .proficiencies h4 {
   position: relative;
+  padding-bottom: 5px;
 }
 
 #about .proficiencies h4::after {
   position: absolute;
   width: 35px;
   height: 3px;
-  bottom: -5px;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   content: '';
@@ -56,6 +64,16 @@
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
+  filter: drop-shadow(0px 2px 5px #5ba45688);
+}
+
+@media screen and (max-width: 635px) {
+  #about .pillars div {
+    background-image: url(/public/hexagon-small.svg);
+    height: 88px;
+    width: 88px;
+    font-size: 0.8em;
+  }
 }
 
 #about .proficiencies ul {
@@ -68,7 +86,9 @@
 #about .proficiencies li {
   border: 1px solid var(--col-grn-med);
   padding: 5px 10px;
-  margin: 2px 2px;
+  margin: 10px 5px;
   border-radius: 20px;
   background-color: var(--col-grn-brt);
+  font-size: 0.8em;
+  filter: drop-shadow(0px 2px 5px #5ba45688);
 }
