--- a/front-end/src/styles/contact.css
+++ b/front-end/src/styles/contact.css
@@ -76,7 +76,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding-top: 100px;
+  padding: 10% 0;
 }
 
 #contact .socials a {
